--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,7 @@
             android:name=".MainActivityPRINCIPAL"
             android:exported="false" />
 
-        <meta-data
-            android:name="com.google.android.gms.common.api.Api.KEY"
-            android:value="@string/google_maps_key" />
+
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -31,7 +29,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY" />
+            android:value="AIzaSyAKz0Y2toUVGSec2d-MPzNaHj-qIKHviws" />
 
         <activity
             android:name=".MapsActivity"
